--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src\assets\logoNoBackground.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaleb McHenry | Portfolio</title>
+    <title>Kaleb McHenry Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
