--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src\assets\logoNoBackground.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Portfolio, Kaleb, Mchenry, kaleb, mchenry, kalebmchenry, KalebMchenry, McHenry">
+    <meta name="description" content="My portfolio site">
+    <meta name="author" content="Kaleb McHenry">
     <title>Kaleb McHenry Portfolio</title>
   </head>
   <body>
